staged build; dynlink_compilerlibs using bottomup ns

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,15 +1,31 @@
 common --color=yes
 
-build --config=dbg
+## always stamp, it injects the absolute path of the workspace root
+# https://docs.bazel.build/versions/main/user-manual.html#flag--workspace_status_command
+build --stamp --workspace_status_command=$PWD/bzl/camlheader.sh
+
+build --config=verbose
+build:verbose --subcommands=pretty_print
+build:verbose --verbose_failures
+
+# build --config=dbg
+
+## enable debug for ocamlrun:
+## build --//config/debug:ocamlrun
 
 build:dbg --subcommands=pretty_print
 build:dbg --verbose_failures
 # build:dbg --sandbox_debug
+build:dbg --//config/debug:ocamlrun
+
+build:stage1 --//bzl/toolchain:ocamlc=//compilers/stage1:ocamlc
+build:stage1 --//bzl:stage=0
+
+build:stage2 --//bzl/toolchain:ocamlc=//compilers/stage2:ocamlc
+build:stage2 --//bzl:stage=1
+
 
 build:bytecode --@ocaml//mode=bytecode
 build:bytecode --@ppx//mode=bytecode
 
 try-import .private/user.bazelrc
-
-# https://docs.bazel.build/versions/main/user-manual.html#flag--workspace_status_command
-build --stamp --workspace_status_command=$PWD/bzl/camlheader.sh
