--- a/compilerlibs/Makefile.compilerlibs
+++ b/compilerlibs/Makefile.compilerlibs
@@ -197,50 +197,50 @@ endif
 
 ASMCOMP = \
   $(ARCH_SPECIFIC_ASMCOMP) \
-xx  asmcomp/arch.cmo \
-x  asmcomp/cmm.cmo \
-x  asmcomp/printcmm.cmo \
-x  asmcomp/reg.cmo \
-x  asmcomp/mach.cmo \
-xx  asmcomp/proc.cmo \
-x  asmcomp/afl_instrument.cmo \
-x  asmcomp/strmatch.cmo \
-x  asmcomp/cmmgen_state.cmo \
-x  asmcomp/cmm_helpers.cmo \
-x  asmcomp/cmmgen.cmo \
-x  asmcomp/cmm_invariants.cmo \
-x  asmcomp/interval.cmo \
-x  asmcomp/printmach.cmo \
-x  asmcomp/dataflow.cmo \
-x  asmcomp/polling.cmo \
-x  asmcomp/selectgen.cmo \
-xx  asmcomp/selection.cmo \
-x  asmcomp/comballoc.cmo \
-x  asmcomp/CSEgen.cmo \
-xx  asmcomp/CSE.cmo \
-x  asmcomp/liveness.cmo \
-x  asmcomp/spill.cmo \
-x  asmcomp/split.cmo \
-x  asmcomp/interf.cmo \
-x  asmcomp/coloring.cmo \
-x  asmcomp/linscan.cmo \
-x  asmcomp/reloadgen.cmo \
-xx  asmcomp/reload.cmo \
-x  asmcomp/deadcode.cmo \
-x  asmcomp/linear.cmo \
-x  asmcomp/printlinear.cmo \
-x  asmcomp/linearize.cmo \
-X  file_formats/linear_format.cmo \
-x  asmcomp/schedgen.cmo \
-xx  asmcomp/scheduling.cmo \
-x  asmcomp/branch_relaxation_intf.cmo \
-x  asmcomp/branch_relaxation.cmo \
-x  asmcomp/emitaux.cmo \
-xx  asmcomp/emit.cmo \
-x  asmcomp/asmgen.cmo \
-x  asmcomp/asmlink.cmo \
-x  asmcomp/asmlibrarian.cmo \
-x  asmcomp/asmpackager.cmo \
+  asmcomp/arch.cmo \
+  asmcomp/cmm.cmo \
+  asmcomp/printcmm.cmo \
+  asmcomp/reg.cmo \
+  asmcomp/mach.cmo \
+  asmcomp/proc.cmo \
+  asmcomp/afl_instrument.cmo \
+  asmcomp/strmatch.cmo \
+  asmcomp/cmmgen_state.cmo \
+  asmcomp/cmm_helpers.cmo \
+  asmcomp/cmmgen.cmo \
+  asmcomp/cmm_invariants.cmo \
+  asmcomp/interval.cmo \
+  asmcomp/printmach.cmo \
+  asmcomp/dataflow.cmo \
+  asmcomp/polling.cmo \
+  asmcomp/selectgen.cmo \
+  asmcomp/selection.cmo \
+  asmcomp/comballoc.cmo \
+  asmcomp/CSEgen.cmo \
+  asmcomp/CSE.cmo \
+  asmcomp/liveness.cmo \
+  asmcomp/spill.cmo \
+  asmcomp/split.cmo \
+  asmcomp/interf.cmo \
+  asmcomp/coloring.cmo \
+  asmcomp/linscan.cmo \
+  asmcomp/reloadgen.cmo \
+  asmcomp/reload.cmo \
+  asmcomp/deadcode.cmo \
+  asmcomp/linear.cmo \
+  asmcomp/printlinear.cmo \
+  asmcomp/linearize.cmo \
+  file_formats/linear_format.cmo \
+  asmcomp/schedgen.cmo \
+  asmcomp/scheduling.cmo \
+  asmcomp/branch_relaxation_intf.cmo \
+  asmcomp/branch_relaxation.cmo \
+  asmcomp/emitaux.cmo \
+  asmcomp/emit.cmo \
+  asmcomp/asmgen.cmo \
+  asmcomp/asmlink.cmo \
+  asmcomp/asmlibrarian.cmo \
+  asmcomp/asmpackager.cmo \
   driver/opterrors.cmo \
   driver/optcompile.cmo \
   driver/optmaindriver.cmo
