--- a/bzl/BUILD.bazel
+++ b/bzl/BUILD.bazel
@@ -1,1 +1,28 @@
-# do not remove
+load("@bazel_skylib//rules:common_settings.bzl",
+     "int_flag", "int_setting",
+)
+
+int_flag(
+    name = "stage",
+    build_setting_default = 0,
+    visibility = ["//visibility:public"]
+)
+
+int_setting(
+    name = "stage0",
+    build_setting_default = 0,
+    visibility = ["//visibility:public"]
+)
+
+int_setting(
+    name = "stage1",
+    build_setting_default = 1,
+    visibility = ["//visibility:public"]
+)
+
+int_setting(
+    name = "stage2",
+    build_setting_default = 2,
+    visibility = ["//visibility:public"]
+)
+
